# restaurant-agent

./: .gitignore  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  redis_client.py
alembic/: env.py
alembic/versions/: 66f2af9aa07a_initial_schema.py  9c2ca1db7747_add_feature_columns_v2.py  9cd33886d71f_add_embedding_columns_intent_table.py
api/: dependencies.py  main.py  middleware.py
api/routers/: __init__.py  chat.py  frontend.py  menu.py  orders.py  restaurants.py
core/: __init__.py  context_manager.py  embeddings.py  graph.py  nodes.py  pre_dispatch.py  session_context.py  state.py  tools.py
db/: __init__.py  base.py  embedding_gen.py  init.sql  intent_seed.py  migrations.py  migrations_intelligence.sql  migrations_v2.sql  models.py  seed.py
docs/: agent.md  architecture.md  database.md  monitoring.md  redis.md
llm/: __init__.py  base.py  factory.py  gemini.py  llamacpp_provider.py  ollama_provider.py
monitoring/: __init__.py  dashboard.py  events.py  hooks.py
prompts/: system_prompt.py
scratch/: clear_and_reseed.py  reseed_intents.py  test_flow.py
services/: __init__.py  allergen_service.py  intelligence_service.py  menu_service.py  order_service.py  profile_service.py  restaurant_service.py  rule_service.py
static/: index.html
tests/: test_features.py
ui/: __init__.py  terminal.py  web_ui.py
workers/: __init__.py  tasks.py
