[project]
name = "restaurant-agent"
version = "0.1.0"
description = "Multi-tenant AI restaurant ordering system"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    # Redis & task queue
    "redis[asyncio]>=5.0.8",
    "celery>=5.4.0",
    # LangGraph & LangChain
    "langgraph>=0.2.28",
    "langchain-core>=0.3.10",
    "langchain-google-genai>=2.0.1",   # Gemini
    "langchain-ollama>=0.2.0",          # Ollama
    "langchain-openai>=0.2.3",          # llama.cpp server + any OpenAI-compatible endpoint
    "langchain-community>=0.3.2",       # shared utilities
    # LLM SDKs
    "google-generativeai>=0.8.3",
    "ollama>=0.3.3",
    # Validation & config
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    # UI
    "rich>=13.8.1",
    "nicegui>=1.4.33",
    # Utilities
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
# Dev tools
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
dev-dependencies = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.6.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
